src/components/Tab/Tab.scss
@import '../../styles/variables.scss';

.Tab {
  @extend .clickable-light;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 200px;
  cursor: default;
  font-size: 14px;
  user-select: none;

  &:not(:first-child) {
    border-left: 1px solid rgba(0, 0, 0, 0.05);
  }

  &:last-child {
    border-right: 1px solid rgba(0, 0, 0, 0.05);
  }

  &.selected,
  &.selected + & {
    border-left-color: transparent;
  }

  &:last-child.selected {
    border-right-color: transparent;
  }

  .tab-name {
    white-space: nowrap;
    text-overflow: ellipsis;
    padding: 0 12px;
  }

  &:hover .close-area .btn-close {
    opacity: 1;
  }

  &.selected {
    background: white;
    box-shadow: $box-shadow-8;

    .close-area .btn-close:not(:focus-visible):not(:-moz-focusring) {
      opacity: 1;
    }
  }

  .close-area {
    display: flex;
    justify-content: center;
    align-items: center;
    width: $bar-height;
    height: $bar-height;

    .btn-close {
      font-family: 'Segoe MDL2 Assets', serif;
      font-size: 10px;
      padding: 0;

      &:not(:focus-visible):not(:-moz-focusring) {
        opacity: 0;
      }

      &:hover {
        color: #fe1c1c;
      }

      &:focus-visible {
        color: #fe1c1c;
      }

      &:-moz-focusring {
        color: #fe1c1c;
      }

      &:active {
        color: #b21d1d;
      }
    }
  }
}

